Bug 1755702: Return NOT_IMPLEMENTED from mozilla::webgpu::CanvasContext::GetInputStream. r=jgilbert

Continue to set the returned stream to `nullptr` (which callers do not
check for, but is safe), but return `NS_ERROR_NOT_IMPLEMENTED` instead
of `NS_OK` --- callers do check the `nsresult`.

Returning an `NS_FAILED` result from our `GetInputStream`
implementation causes `HTMLCanvasElement.prototype.toDataURL` to
return the fallback value `"data:,"`.

Differential Revision: https://phabricator.services.mozilla.com/D144242